fix: don't show cursor behind graph elements

--- a/venator-app/src/components/span-graph.css
+++ b/venator-app/src/components/span-graph.css
@@ -1,5 +1,4 @@
 .span-graph-bar {
-    z-index: 1;
     min-width: 1px;
     height: 4px;
     position: absolute;
