--- a/venator-app/src/components/trace-graph.css
+++ b/venator-app/src/components/trace-graph.css
@@ -2,7 +2,6 @@
     min-width: 1px;
     height: 4px;
     position: absolute;
-    z-index: 1;
 }
 
 .trace-graph-bar.level-0 {
